; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince.c_towide.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_wince.c_towide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@towide.n = internal global i32 -1, align 4
@towide.outs = internal global [8 x i32*] zeroinitializer, align 16
@CP_ACP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @towide(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32* %6, i32** %5, align 8
  br label %10

10:                                               ; preds = %9, %2
  %11 = load i32, i32* @CP_ACP, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @MultiByteToWideChar(i32 %11, i32 0, i8* %12, i32 -1, i32* null, i32 0)
  %14 = sext i32 %13 to i64
  %15 = mul i64 4, %14
  %16 = trunc i64 %15 to i32
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %10
  store i32* null, i32** %3, align 8
  br label %60

22:                                               ; preds = %10
  %23 = load i32, i32* @towide.n, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* @towide.n, align 4
  %25 = sext i32 %24 to i64
  %26 = icmp uge i64 %25, 8
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32 0, i32* @towide.n, align 4
  br label %28

28:                                               ; preds = %27, %22
  %29 = load i32, i32* @towide.n, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds [8 x i32*], [8 x i32*]* @towide.outs, i64 0, i64 %30
  %32 = load i32*, i32** %31, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @xrealloc(i32* %32, i32 %34)
  %36 = inttoptr i64 %35 to i32*
  %37 = load i32, i32* @towide.n, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds [8 x i32*], [8 x i32*]* @towide.outs, i64 0, i64 %38
  store i32* %36, i32** %39, align 8
  %40 = load i32, i32* @towide.n, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds [8 x i32*], [8 x i32*]* @towide.outs, i64 0, i64 %41
  %43 = load i32*, i32** %42, align 8
  %44 = load i32*, i32** %5, align 8
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @memset(i32* %43, i32 0, i32 %45)
  %47 = load i32, i32* @CP_ACP, align 4
  %48 = load i8*, i8** %4, align 8
  %49 = load i32, i32* @towide.n, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds [8 x i32*], [8 x i32*]* @towide.outs, i64 0, i64 %50
  %52 = load i32*, i32** %51, align 8
  %53 = load i32*, i32** %5, align 8
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @MultiByteToWideChar(i32 %47, i32 0, i8* %48, i32 -1, i32* %52, i32 %54)
  %56 = load i32, i32* @towide.n, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds [8 x i32*], [8 x i32*]* @towide.outs, i64 0, i64 %57
  %59 = load i32*, i32** %58, align 8
  store i32* %59, i32** %3, align 8
  br label %60

60:                                               ; preds = %28, %21
  %61 = load i32*, i32** %3, align 8
  ret i32* %61
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i64 @xrealloc(i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
